<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Sri Julistina Juanda"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bio"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            card_view:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/lang_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_language"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_desc"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_desc"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/lang_ic" />

        <TextView
            android:id="@+id/lang"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/python"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/lang_ic"
            card_view:layout_constraintStart_toEndOf="@+id/lang_ic"
            card_view:layout_constraintTop_toTopOf="@+id/lang_ic"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_size"
            card_view:layout_constraintBottom_toBottomOf="@+id/lang"
            card_view:layout_constraintStart_toEndOf="@+id/lang"
            card_view:layout_constraintTop_toTopOf="@+id/lang"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/size_ic" />

        <TextView
            android:id="@+id/size"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_0"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView3"
            card_view:layout_constraintStart_toEndOf="@+id/imageView3"
            card_view:layout_constraintTop_toTopOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>