<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <include
        android:id="@+id/tp1"
        layout="@layout/template1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tp_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        tools:src="@tools:sample/avatars"
        app:civ_border_color="@color/textcolor1"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_img"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_following"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_bio"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewFl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Following"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_following"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_followers"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tp_repo"
        app:layout_constraintStart_toEndOf="@+id/tp_following"
        app:layout_constraintTop_toBottomOf="@+id/tp_bio"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewFl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Followers"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewFl2"
        app:layout_constraintStart_toEndOf="@+id/textViewFl"
        app:layout_constraintTop_toBottomOf="@+id/tp_followers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tp_repo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_bio"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewFl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repository"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tp_repo"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tp1"
        app:tabTextColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/background_button_favorite_dark"
        android:contentDescription="@string/addtofavorite"
        android:src="@drawable/ic_favorite_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>